# OpenCPNJG

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  pytest.ini  requirements-test.txt
.github/workflows/: license.yml  native_cm93.yml  stage-and-test.yml  vdr-assets.yml  vdr-glyphs.yml  vdr.yml
VDR/: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  import_enc.py  pytest.ini
VDR/assets/fonts/: PROVENANCE.txt
VDR/assets/s52/: .gitignore  PROVENANCE.txt
VDR/chart-tiler/: Makefile  README.md  cm93_importer.py  cm93_rules.py  convert_charts.py  datasource_mbtiles.py  datasource_stub.py  dict_builder.py  import_enc.py  ingest_charts.py  lights.py  mapproxy.yaml  metrics.py  mvt_builder.py  opencpn_ingest.py  raster_mvp.py  registry.py  render_tile.py  requirements-optional.txt  requirements.txt  s52_preclass.py  tileserver.py
VDR/chart-tiler/charts_py/: setup.py
VDR/chart-tiler/config/: cm93_dictionary.yml
VDR/chart-tiler/docs/: mvt_schema.md
VDR/chart-tiler/migrations/: 001_cm93_init.sql
VDR/chart-tiler/scripts/: validate_offsets.py
VDR/chart-tiler/sql/: cm93_mvt.sql  enc_mvt.sql
VDR/chart-tiler/tests/: test_charts_api.py  test_charts_summary.py  test_cm93_adapter.py  test_cm93_convert_cli.py  test_cm93_db.py  test_cm93_importer_fallback.py  test_cm93_mvt.py  test_cm93_rules.py  test_cm93_tiles_dataset.py  test_convert_geotiff.py  test_dict_builder.py  test_finalize_safety.py  test_generate_tile.py  test_geotiff.py  test_import_cm93.py  test_import_enc.py  test_import_geotiff.py  test_ingest.py  test_light_tiles.py  test_lights.py  test_mbtiles_stream.py  test_metrics_idempotent.py  test_mvt_schema.py  test_mvt_semantics.py  test_named_attributes.py  test_offsets.py  test_perf_tiles.py  test_preclass_expanded.py  test_raster_mvp.py  test_registry_api_phase2.py  test_registry_scan.py  test_render_cli.py  test_s57_catalogue_ingest.py  test_scamin_mapping.py  test_senc_registry.py  test_tile_integrity.py  test_tiles_geotiff.py  test_tiles_geotiff_real.py  test_tileserver.py  test_tileserver_health.py
VDR/chart-tiler/tools/: __init__.py  convert_geotiff.py  import_cm93.py  (+4 more)
VDR/client/: README.md
VDR/docs/: CHANGELOG.md  PR_SUMMARY_PHASE10.md  PR_SUMMARY_PHASE12.md  PR_SUMMARY_PHASE12_ENC_ONLINE.md  PR_SUMMARY_PHASE13.md  PR_SUMMARY_PHASE13_ENC_REGISTRY.md  PR_SUMMARY_PHASE14.md  PR_SUMMARY_PHASE4.md  PR_SUMMARY_PHASE5.md  PR_SUMMARY_PHASE6.md  PR_SUMMARY_PHASE7.md  PR_SUMMARY_PHASE8.md  PR_SUMMARY_PHASE9.md  PR_SUMMARY_PHASE_1_3_1_TO_1_4_1.md  PR_SUMMARY_PHASE_2_IMPORTS.md  PR_SUMMARY_STAGE_ASSETS_AND_COVERAGE.md  backend-endpoints.md  bauv.md  ci.md  cm93_import.md  cm93_s57_phase2.md  cm93_transition.md  dev-up.md  enc_mbtiles.md  geotiff_cog.md  map_pipeline.md  mvt_schema.md  ocpn_mini_vendor.md  opencpn_cm93_notes.md  operator_runbook.md  perf_budgets.md  registry.md  s52s57cm93.md  style-api.md  style_api.md
VDR/hybrid-vector-tiles/: README.md
VDR/ingest_core/: engine.py
VDR/ingest_pkg/: classifier.py  compat.py  sniff.py
VDR/opencpn-libs/: CMakeLists.txt  README.md
VDR/opencpn-libs/.github/workflows/: ci.yml
VDR/opencpn-libs/include/: charts.h  libcharts_api.h
VDR/opencpn-libs/py/: charts.py
VDR/opencpn-libs/src/: charts.cpp  libcharts_api.cpp
VDR/opencpn-libs/src/cm93/: dummy.cpp
VDR/opencpn-libs/src/ps52plib/: dummy.cpp
VDR/opencpn-libs/src/s57chart/: dummy.cpp
VDR/opencpn_bridge/: CMakeLists.txt  Osenc.cpp  README.md  bridge.cpp  bridge.h  cm93.cpp  pybind.cpp  pyproject.toml  s57chart.cpp
VDR/opencpn_bridge/cli/: opb.py
VDR/opencpn_bridge/cpp/ocpn_shim/: wx_shim.h
VDR/opencpn_bridge/docs/: README.md  api_contracts.md  bridge_build.md  ocpn_mini_vendor.md
VDR/opencpn_bridge/py/: __init__.py  bridge.py  ingest.py
VDR/opencpn_bridge/registry/: AGENTS.md  __init__.py  registry.sqlite.txt
VDR/opencpn_bridge/s52plib/src/: Cs52_shaders.h  DepthFont.cpp  DepthFont.h  TexFont.cpp  TexFont.h  chartsymbols.cpp  chartsymbols.h  mygeom.cpp  mygeom.h  s52cnsy.cpp  s52plib.cpp  s52plib.h  s52plibGL.h  s52utils.h
VDR/opencpn_bridge/tests/: test_bbox_math.py  test_stub_tiles.py  test_tileserver_metrics.py
VDR/opencpn_bridge/tileserver/: app.py  metrics.py
VDR/opencpn_bridge/tools/: stage_s52_assets.py
VDR/s57_CM93map_import/: ingest.py
VDR/s57_CM93map_import/native/: CMakeLists.txt
VDR/s57_CM93map_import/native/src/: cm93_iter.cpp  cm93_iter.hpp  emit_stub.cpp  main.cpp  ndjson.cpp  ndjson.hpp  s57_iter.cpp  s57_iter.hpp  types.hpp
VDR/scripts/: bake_glyphs.js  build_static.py  stage_assets_all.sh  stage_s52_assets.sh
VDR/server-styling/: .gitignore  Makefile  README.md  build_s52_assets.py  build_style_json.py  generate_sprite_json.py  s52_coverage.py  s52_xml.py  sync_opencpn_assets.py
VDR/testdata/: README.md
VDR/tests/: minimal_settings.py  test_opencpn_bridge.py  test_tileserver_senc.py
VDR/tools/: allowlist.txt  license_scan.py
VDR/tools/cm93_convert/: CMakeLists.txt  main.cpp  main.py
VDR/web-client/: README.md  index.html  package-lock.json  package.json
docs/: api_contracts.md  ocpn_mini_vendor.md
opencpn_bridge/: CMakeLists.txt  __init__.py
opencpn_bridge/cpp/: CMakeLists.txt  bridge.cpp  bridge.h
opencpn_bridge/cpp/mvt/: empty_tile.hpp  tests.cpp
opencpn_bridge/cpp/stub/: bridge_stub.cpp  stub.cpp
opencpn_bridge/py/: __init__.py  bridge.py  ingest.py  opencpn_bridge.py  util_bbox.py
opencpn_bridge/py/tests/: test_ingest.py
opencpn_bridge/registry/: __init__.py
opencpn_bridge/tests/: test_bbox_math.py  test_stub_tiles.py
opencpn_bridge/tileserver/: app.py
opencpn_bridge/tools/: stage_s52_assets.py
test/: test_server.py
wrapper/: CMakeLists.txt  stub.cpp  vendor_filelist.cmake
wrapper/shim/: fs.hpp  geo.hpp  log.hpp  s52s57.h  strings.hpp
wrapper/shim/gdal/: cpl_conv.h  cpl_port.h  cpl_string.h  ogr_api.h
wrapper/shim/wx/: arrstr.h  filename.h  image.h  listctrl.h  mstream.h  regex.h  spinctrl.h  textfile.h  tokenzr.h  wx.h
wrapper/src/: attr_codec.cpp  attr_codec.hpp  bbox.cpp  bbox.hpp  emit_ndjson.cpp  emit_ndjson.hpp  main.cpp
(+72 files in other folders)
