[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opencpn_bridge"
version = "0.1.0"
description = "Python bindings for OpenCPN SENC generation and feature queries"
authors = [{name = "OpenCPN"}]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://opencpn.org"

[tool.setuptools]
packages = ["opencpn_bridge"]
package-dir = {"opencpn_bridge" = "py"}
