[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opencpn_bridge"
version = "0.1.0"
description = "Python bindings for OpenCPN SENC generation and feature queries"
authors = [{name = "OpenCPN"}]
requires-python = ">=3.8"

[project.scripts]
opb = "opencpn_bridge.cli.opb:app"

[project.urls]
Homepage = "https://opencpn.org"

[tool.setuptools]
packages = [
    "opencpn_bridge",
    "opencpn_bridge.cli",
    "opencpn_bridge.tools",
    "opencpn_bridge.tileserver",
    "opencpn_bridge.registry",
]

[tool.setuptools.package-dir]
"opencpn_bridge" = "py"
"opencpn_bridge.cli" = "cli"
"opencpn_bridge.tools" = "tools"
"opencpn_bridge.tileserver" = "tileserver"
"opencpn_bridge.registry" = "registry"
